Team scores in scoreboard no longer overflow the grid cell they are in.

--- a/src/app/gamemaster/scoreboard/scoreboard.component.scss
+++ b/src/app/gamemaster/scoreboard/scoreboard.component.scss
@@ -12,7 +12,7 @@
     padding: 10px 20px;
     display: grid;
     grid-template-rows: auto;
-    grid-template-columns: 8fr 1fr;
+    grid-template-columns: 1fr auto;
 }
 
 .scoreboard-team > p {
